--- a/src/sdg/scss/components/_radioTile.scss
+++ b/src/sdg/scss/components/_radioTile.scss
@@ -21,8 +21,11 @@
   }
 
   &:not(:has(input:disabled)):hover::before {
-    border-color: token-value(color, blue, light);
     cursor: pointer;
+  }
+
+  &:not(:has(input:focus)):hover::before {
+    border-color: token-value(color, blue, light);
   }
 
   &:has(input:checked)::before {
