--- a/src/sdg/scss/components/_radioTile.scss
+++ b/src/sdg/scss/components/_radioTile.scss
@@ -7,11 +7,11 @@
 }
 
 .qc-radio-tile {
-  @include check-style(radio, sm);
   display: flex;
   flex-grow: 1;
   align-items: start !important;
   padding: token-value(spacer, sm);
+  margin: 0;
   @include qc-formcontrol-box();
 
   &::before {
@@ -24,7 +24,7 @@
     cursor: pointer;
   }
 
-  &:not(:has(input:focus)):hover::before {
+  &:not(:has(input:focus, input:disabled)):hover::before {
     border-color: token-value(color, blue, light);
   }
 
@@ -32,38 +32,70 @@
     background-color: token-value(color, blue, pale);
   }
 
-  &:has(input:disabled)::before {
+  &:has(input:disabled) {
     color: token-value(color, grey, regular);
-    background-color: token-value(color, grey, pale);
-    cursor: not-allowed;
+    &::before {
+      background-color: token-value(color, grey, pale);
+      cursor: not-allowed;
+    }
   }
 
-  input[type=radio] {
-    margin-right: token-value(spacer, xs);
-    margin-top: rem(4);
+  .qc-radio-tile-label-span {
+    display: flex;
+    flex-direction: column;
+    row-gap: token-value(spacer, xs);
+  }
+
+  .qc-radio-tile-label-choice {
+    @include content-font(md, semi-bold);
+    min-height: token-value(spacer, md);
+  }
+
+  .qc-radio-tile-label-description {
+    @include content-font(sm);
+  }
+
+  .qc-radio-tile-input {
+    appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
+
+    display: flex;
+    position: relative;
+
+    min-width: token-value(spacer, sm);
+    min-height: token-value(spacer, sm);
+
+    margin: rem(4) token-value(spacer, xs) 0 0;
+    background-color: token-value(color, white);
+    border-style: solid;
+    border-color: token-value(color, blue, dark);
+    border-width: rem(1);
+    border-radius: 100%;
 
     &::before {
-      width: rem(10);
-      height: rem(10);
+      content: "";
+      position: absolute;
+      margin: auto;
+      inset: 0;
+      overflow: hidden;
+      opacity: 0;
+      border-radius: 100%;
     }
 
-    &:focus::before {
-      outline: none !important;
+    &:checked {
+      border-color: token-value(color, blue, regular);
+
+      &::before {
+        opacity: 1;
+        background-color: token-value(color, blue, regular);
+        width: rem(10);
+        height: rem(10);
+      }
+    }
+
+    &:disabled {
+      border-color: token-value(color, grey, light);
     }
   }
-}
-
-.qc-radio-tile-label-span {
-  display: flex;
-  flex-direction: column;
-  row-gap: token-value(spacer, xs);
-}
-
-.qc-radio-tile-label-choice {
-  @include content-font(md, semi-bold);
-  min-height: token-value(spacer, md);
-}
-
-.qc-radio-tile-label-description {
-  @include content-font(sm);
 }
