--- a/src/sdg/scss/components/_radioSelectionButton.scss
+++ b/src/sdg/scss/components/_radioSelectionButton.scss
@@ -92,6 +92,10 @@
         width: rem(10);
         height: rem(10);
       }
+
+      &:focus {
+        outline: none;
+      }
     }
 
     &:disabled {
