--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2089,10 +2089,10 @@ qc-search-bar {
 }
 .qc-radio-select:has(input:disabled) {
   color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
 }
 .qc-radio-select:has(input:disabled)::before {
   background-color: var(--qc-color-grey-pale);
-  cursor: not-allowed;
 }
 .qc-radio-select .qc-radio-select-label-span {
   display: flex;
@@ -2321,6 +2321,39 @@ qc-search-bar {
 .qc-checkbox-select-main-div {
   display: flex;
   flex-grow: 1;
+}
+
+.qc-checkbox-select-input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: relative;
+  margin: 0.4rem var(--qc-spacer-xs) 0 0;
+  width: var(--qc-spacer-sm);
+  height: var(--qc-spacer-sm);
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: var(--qc-color-blue-dark);
+}
+.qc-checkbox-select-input:checked {
+  background-color: var(--qc-color-blue-regular);
+  border-color: var(--qc-color-blue-regular);
+}
+.qc-checkbox-select-input:checked::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E");
+          mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E");
+  -webkit-mask-size: contain;
+          mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+          mask-position: center;
+  background-color: var(--qc-color-white);
 }
 
 .qc-checkbox-group-tiles-row {
