--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1140,6 +1140,12 @@ qc-icon {
   -webkit-mask-size: 100% 100%;
           mask-size: 100% 100%;
 }
+.qc-icon[data-img-type=checkmark] {
+  -webkit-mask: url("data:image/svg+xml;base64,data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E") no-repeat;
+          mask: url("data:image/svg+xml;base64,data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E") no-repeat;
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+}
 .qc-icon.qc-icon-sm {
   min-width: 12px;
   height: 12px;
@@ -1838,30 +1844,31 @@ qc-search-bar {
   background-color: rgba(var(--qc-color-grey-light-rgb), 0.16);
 }
 
-.qc-radio-sm {
+.qc-check-row {
   display: flex;
   align-items: center;
   min-height: var(--qc-spacer-md);
   margin: 0;
   padding: 0;
 }
-.qc-radio-sm input[type=radio] {
-  width: var(--qc-spacer-sm);
-  height: var(--qc-spacer-sm);
-  border-width: 1px;
+.qc-check-row input[type=radio],
+.qc-check-row input[type=checkbox] {
+  display: flex;
+  position: relative;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
   cursor: pointer;
-  display: flex;
-  position: relative;
   margin: 0;
   background-color: var(--qc-color-white);
   border-style: solid;
   border-color: var(--qc-color-blue-dark);
-  border-radius: 100%;
+  width: var(--qc-spacer-md);
+  height: var(--qc-spacer-md);
+  border-width: 2px;
 }
-.qc-radio-sm input[type=radio]::before {
+.qc-check-row input[type=radio]::before,
+.qc-check-row input[type=checkbox]::before {
   content: "";
   position: absolute;
   margin: auto;
@@ -1869,29 +1876,28 @@ qc-search-bar {
   overflow: hidden;
   opacity: 0;
 }
-.qc-radio-sm input[type=radio]:focus {
+.qc-check-row input[type=radio]:focus,
+.qc-check-row input[type=checkbox]:focus {
   outline: 2px solid var(--qc-color-blue-light);
   outline-offset: 0;
   border-color: var(--qc-color-blue-dark) !important;
   border-width: 2px;
 }
-.qc-radio-sm input[type=radio]:checked {
+.qc-check-row input[type=radio]:checked,
+.qc-check-row input[type=checkbox]:checked {
   border-color: var(--qc-color-blue-regular);
 }
-.qc-radio-sm input[type=radio]:checked::before {
-  opacity: 1;
-  border-radius: 100%;
-  background-color: var(--qc-color-blue-regular);
-}
-.qc-radio-sm input[type=radio]:disabled {
+.qc-check-row input[type=radio]:disabled,
+.qc-check-row input[type=checkbox]:disabled {
   cursor: not-allowed;
   border-color: var(--qc-color-grey-light);
 }
-.qc-radio-sm input[type=radio]:disabled + label {
+.qc-check-row input[type=radio]:disabled + label,
+.qc-check-row input[type=checkbox]:disabled + label {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
-.qc-radio-sm label {
+.qc-check-row label {
   display: flex;
   align-items: end;
   cursor: pointer;
@@ -1902,130 +1908,86 @@ qc-search-bar {
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
 }
-.qc-radio-sm input[type=radio]::before {
+
+.qc-compact input[type=radio],
+.qc-compact input[type=checkbox] {
+  width: var(--qc-spacer-sm);
+  height: var(--qc-spacer-sm);
+  border-width: 1px;
+}
+
+.qc-check-row input[type=radio] {
+  border-radius: 100%;
+}
+.qc-check-row input[type=radio]::before {
+  width: 1.4rem;
+  height: 1.4rem;
+  border-radius: 100%;
+  background-color: var(--qc-color-blue-regular);
+}
+.qc-check-row input[type=radio]:checked::before {
+  opacity: 1;
+}
+.qc-compact input[type=radio]::before {
   width: 1rem;
   height: 1rem;
 }
 
-.qc-radio-md {
-  display: flex;
-  align-items: center;
-  min-height: var(--qc-spacer-md);
-  margin: 0;
-  padding: 0;
-}
-.qc-radio-md input[type=radio] {
-  width: var(--qc-spacer-md);
-  height: var(--qc-spacer-md);
-  border-width: 2px;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  cursor: pointer;
-  display: flex;
-  position: relative;
-  margin: 0;
-  background-color: var(--qc-color-white);
-  border-style: solid;
-  border-color: var(--qc-color-blue-dark);
-  border-radius: 100%;
-}
-.qc-radio-md input[type=radio]::before {
-  content: "";
-  position: absolute;
-  margin: auto;
-  inset: 0;
-  overflow: hidden;
-  opacity: 0;
-}
-.qc-radio-md input[type=radio]:focus {
-  outline: 2px solid var(--qc-color-blue-light);
-  outline-offset: 0;
-  border-color: var(--qc-color-blue-dark) !important;
-  border-width: 2px;
-}
-.qc-radio-md input[type=radio]:checked {
-  border-color: var(--qc-color-blue-regular);
-}
-.qc-radio-md input[type=radio]:checked::before {
-  opacity: 1;
-  border-radius: 100%;
-  background-color: var(--qc-color-blue-regular);
-}
-.qc-radio-md input[type=radio]:disabled {
-  cursor: not-allowed;
-  border-color: var(--qc-color-grey-light);
-}
-.qc-radio-md input[type=radio]:disabled + label {
-  color: var(--qc-color-grey-regular);
-  cursor: not-allowed;
-}
-.qc-radio-md label {
-  display: flex;
-  align-items: end;
-  cursor: pointer;
-  padding-left: var(--qc-spacer-xs);
-  padding-right: var(--qc-spacer-xs);
-  margin-bottom: 0;
-  font-size: var(--qc-font-size-md);
-  line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-regular);
-}
-.qc-radio-md input[type=radio]::before {
-  width: 1.4rem;
-  height: 1.4rem;
-}
-
-.qc-checkbox-fieldset, .qc-radio-fieldset {
+.qc-fieldset {
   display: flex;
   flex-direction: column;
   border: none;
   padding: 0;
-  margin-left: 0;
-  margin-bottom: var(--qc-spacer-content-block-mb);
-}
-
-.qc-checkbox-group-md, .qc-radio-group-md, .qc-checkbox-group-sm, .qc-radio-group-sm {
-  display: flex;
-  flex-direction: column;
+  margin: 0 0 var(--qc-spacer-content-block-mb);
   justify-items: center;
+  row-gap: var(--qc-spacer-sm);
+}
+.qc-fieldset legend {
+  font-weight: var(--qc-font-weight-content-bold);
+  display: -webkit-box;
+  margin-bottom: var(--qc-spacer-sm);
+}
+.qc-fieldset.qc-compact {
+  margin-bottom: var(--qc-spacer-sm);
 }
 
-.qc-checkbox-legend, .qc-radio-legend {
-  display: -webkit-box;
+.qc-fieldset-disabled legend {
+  color: var(--qc-color-grey-regular);
+}
+
+.qc-fieldset-required {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-bold);
-}
-
-.qc-checkbox-group-sm, .qc-radio-group-sm {
-  margin-top: var(--qc-spacer-xs);
-  row-gap: var(--qc-spacer-xs);
-}
-
-.qc-checkbox-group-md, .qc-radio-group-md {
-  margin-top: var(--qc-spacer-sm);
-  row-gap: var(--qc-spacer-sm);
-}
-
-.qc-checkbox-required, .qc-radio-required {
   display: flex;
   color: var(--qc-color-red-regular);
   margin-left: var(--qc-spacer-xs);
-  font-size: var(--qc-font-size-md);
-  line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-bold);
 }
 
-.checkbox-single.checkbox-single-invalid, .qc-fieldset-invalid {
-  box-shadow: -2px 0 var(--qc-color-red-regular);
+.qc-fieldset-invalid, .checkbox-single.checkbox-single-invalid,
+.qc-fieldset-invalid legend,
+.checkbox-single.checkbox-single-invalid legend {
+  border-left: 2px solid var(--qc-color-red-regular);
   padding-left: var(--qc-spacer-xs);
 }
 
-.checkbox-md input[type=checkbox]:checked, .checkbox-sm input[type=checkbox]:checked {
+.qc-fieldset-invalid legend, .checkbox-single.checkbox-single-invalid legend {
+  margin-left: calc(-1 * var(--qc-spacer-xs) - 2px);
+}
+
+.qc-check-row input[type=checkbox]:checked {
   background-color: var(--qc-color-blue-regular);
 }
-.checkbox-md input[type=checkbox]:checked::after, .checkbox-sm input[type=checkbox]:checked::after {
+.qc-check-row input[type=checkbox]:checked::before {
+  width: 1.2rem;
+  height: 0.7rem;
+  border: 0.3rem solid var(--qc-color-blue-regular);
+  border-top: 0;
+  border-right: 0;
+  transform: rotate(-45deg);
+  top: 0.2rem;
+}
+.qc-check-row input[type=checkbox]:checked::after {
   content: "";
   position: absolute;
   left: 50%;
@@ -2040,67 +2002,11 @@ qc-search-bar {
   -webkit-mask-position: center;
           mask-position: center;
   background-color: var(--qc-color-white);
+  width: var(--qc-spacer-md);
+  height: 1.8rem;
 }
 
-.checkbox-sm {
-  display: flex;
-  align-items: center;
-  min-height: var(--qc-spacer-md);
-  margin: 0;
-  padding: 0;
-}
-.checkbox-sm input[type=checkbox] {
-  width: var(--qc-spacer-sm);
-  height: var(--qc-spacer-sm);
-  border-width: 1px;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  cursor: pointer;
-  display: flex;
-  position: relative;
-  margin: 0;
-  background-color: var(--qc-color-white);
-  border-style: solid;
-  border-color: var(--qc-color-blue-dark);
-}
-.checkbox-sm input[type=checkbox]::before {
-  content: "";
-  position: absolute;
-  margin: auto;
-  inset: 0;
-  overflow: hidden;
-  opacity: 0;
-}
-.checkbox-sm input[type=checkbox]:focus {
-  outline: 2px solid var(--qc-color-blue-light);
-  outline-offset: 0;
-  border-color: var(--qc-color-blue-dark) !important;
-  border-width: 2px;
-}
-.checkbox-sm input[type=checkbox]:checked {
-  border-color: var(--qc-color-blue-regular);
-}
-.checkbox-sm input[type=checkbox]:disabled {
-  cursor: not-allowed;
-  border-color: var(--qc-color-grey-light);
-}
-.checkbox-sm input[type=checkbox]:disabled + label {
-  color: var(--qc-color-grey-regular);
-  cursor: not-allowed;
-}
-.checkbox-sm label {
-  display: flex;
-  align-items: end;
-  cursor: pointer;
-  padding-left: var(--qc-spacer-xs);
-  padding-right: var(--qc-spacer-xs);
-  margin-bottom: 0;
-  font-size: var(--qc-font-size-md);
-  line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-regular);
-}
-.checkbox-sm input[type=checkbox]:checked::before {
+.qc-compact input[type=checkbox]:checked::before {
   width: 0.8rem;
   height: 0.5rem;
   border: 0.2rem solid var(--qc-color-blue-regular);
@@ -2109,81 +2015,9 @@ qc-search-bar {
   transform: rotate(-45deg);
   top: 0.1rem;
 }
-.checkbox-sm input[type=checkbox]:checked::after {
+.qc-compact input[type=checkbox]:checked::after {
   width: var(--qc-spacer-sm);
   height: 1.2rem;
-}
-
-.checkbox-md {
-  display: flex;
-  align-items: center;
-  min-height: var(--qc-spacer-md);
-  margin: 0;
-  padding: 0;
-}
-.checkbox-md input[type=checkbox] {
-  width: var(--qc-spacer-md);
-  height: var(--qc-spacer-md);
-  border-width: 2px;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  cursor: pointer;
-  display: flex;
-  position: relative;
-  margin: 0;
-  background-color: var(--qc-color-white);
-  border-style: solid;
-  border-color: var(--qc-color-blue-dark);
-}
-.checkbox-md input[type=checkbox]::before {
-  content: "";
-  position: absolute;
-  margin: auto;
-  inset: 0;
-  overflow: hidden;
-  opacity: 0;
-}
-.checkbox-md input[type=checkbox]:focus {
-  outline: 2px solid var(--qc-color-blue-light);
-  outline-offset: 0;
-  border-color: var(--qc-color-blue-dark) !important;
-  border-width: 2px;
-}
-.checkbox-md input[type=checkbox]:checked {
-  border-color: var(--qc-color-blue-regular);
-}
-.checkbox-md input[type=checkbox]:disabled {
-  cursor: not-allowed;
-  border-color: var(--qc-color-grey-light);
-}
-.checkbox-md input[type=checkbox]:disabled + label {
-  color: var(--qc-color-grey-regular);
-  cursor: not-allowed;
-}
-.checkbox-md label {
-  display: flex;
-  align-items: end;
-  cursor: pointer;
-  padding-left: var(--qc-spacer-xs);
-  padding-right: var(--qc-spacer-xs);
-  margin-bottom: 0;
-  font-size: var(--qc-font-size-md);
-  line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-regular);
-}
-.checkbox-md input[type=checkbox]:checked::before {
-  width: 1.2rem;
-  height: 0.7rem;
-  border: 0.3rem solid var(--qc-color-blue-regular);
-  border-top: 0;
-  border-right: 0;
-  transform: rotate(-45deg);
-  top: 0.2rem;
-}
-.checkbox-md input[type=checkbox]:checked::after {
-  width: var(--qc-spacer-md);
-  height: 1.8rem;
 }
 
 .checkbox-single {
@@ -2192,9 +2026,11 @@ qc-search-bar {
 .qc-form-error {
   display: flex;
   color: var(--qc-color-red-regular);
-  margin-top: var(--qc-spacer-sm);
   align-items: center;
-  font-weight: var(--qc-font-weight-bold);
+  font-weight: var(--qc-font-weight-content-medium);
+}
+.qc-form-error > * {
+  margin-top: var(--qc-spacer-sm);
 }
 .qc-form-error .qc-icon {
   display: flex;
