--- a/src/sdg/scss/components/_radioButton.scss
+++ b/src/sdg/scss/components/_radioButton.scss
@@ -1,98 +1,27 @@
 @use "qc-sdg-lib" as *;
-@use "checkMixin" as *;
+@use "checkRow" as *;
 
-%radio-style {
-  display: flex;
-  align-items: center;
-  min-height: token-value(spacer, md);
-  margin: 0;
-  padding: 0;
-
-  input[type="radio"] {
-    appearance: none;
-    -webkit-appearance: none;
-    cursor: pointer;
-
-    display: flex;
-    position: relative;
-
-    margin: 0;
-
-    background-color: token-value(color, white);
-    border-style: solid;
-    border-color: token-value(color, blue, dark);
+input[type=radio] {
+  .qc-check-row & {
     border-radius: 100%;
-
-    &::before {
-      content: "";
-      position: absolute;
-      margin: auto;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      top: 0;
-      overflow: hidden;
-      opacity: 0;
-    }
-
-    &:focus {
-      outline: rem(2) solid token-value(color, blue, light);
-      outline-offset: 0;
-      border-color: token-value(color, blue, dark) !important;
-    }
-
-    &:checked {
-      border-color: token-value(color, blue, regular);
-
-      &::before {
-        opacity: 1;
-        border-radius: 100%;
-        background-color: token-value(color, blue, regular);
-      }
-    }
-
-    &:disabled {
-      cursor: not-allowed;
-      border-color: token-value(color, grey, light);
-    }
-
-    &:disabled+label {
-      color: token-value(color, grey, regular);
-      cursor: not-allowed;
-    }
-  }
-
-  label {
-    display: flex;
-    align-items: end;
-    cursor: pointer;
-    padding-left: token-value(spacer, xs);
-    padding-right: token-value(spacer, xs);
-    margin-bottom: 0;
-    @include content-font(md);
-  }
-}
-
-.qc-radio-sm {
-  @include check-style(radio, sm);
-
-  input[type=radio] {
-
-    &::before {
-      width: rem(10);
-      height: rem(10);
-    }
-  }
-}
-
-.qc-radio-md {
-  @include check-style(radio, md);
-
-  input[type=radio] {
 
     &::before {
       width: rem(14);
       height: rem(14);
+      border-radius: 100%;
+      background-color: token-value(color, blue, regular);
+    }
+
+    &:checked::before {
+      opacity: 1;
     }
   }
+
+  .qc-compact &::before {
+    width: rem(10);
+    height: rem(10);
+  }
 }
+
+
+
