--- a/src/sdg/scss/components/_radioSelectionButton.scss
+++ b/src/sdg/scss/components/_radioSelectionButton.scss
@@ -44,11 +44,11 @@
     display: flex;
     flex-direction: column;
     row-gap: token-value(spacer, xs);
+    min-height: token-value(spacer, md);
   }
 
   .qc-radio-select-label-choice {
     @include content-font(md, semi-bold);
-    min-height: token-value(spacer, md);
   }
 
   .qc-radio-select-label-description {
@@ -66,7 +66,7 @@
     min-width: token-value(spacer, sm);
     min-height: token-value(spacer, sm);
 
-    margin: rem(4) token-value(spacer, xs) 0 0;
+    margin-right: token-value(spacer, xs);
     background-color: token-value(color, white);
     border-style: solid;
     border-color: token-value(color, blue, dark);
