--- a/src/sdg/scss/components/_groupsMixins.scss
+++ b/src/sdg/scss/components/_groupsMixins.scss
@@ -87,11 +87,11 @@
 
   .qc-#{$type}-group-tiles-row {
     @extend %group-tiles-row;
-    grid-template-columns: repeat(var(--elementsPerRowOrCol), 1fr);
+    grid-template-columns: repeat(var(--elements-per-row-or-col), 1fr);
   }
 
   .qc-#{$type}-group-tiles-column {
     @extend %group-tiles-column;
-    grid-template-rows: repeat(var(--elementsPerRowOrCol), 1fr);
+    grid-template-rows: repeat(var(--elements-per-row-or-col), 1fr);
   }
 }
