--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1844,30 +1844,38 @@ qc-search-bar {
   background-color: rgba(var(--qc-color-grey-light-rgb), 0.16);
 }
 
-.qc-check-row {
+.qc-selection-button, .qc-check-row {
   display: flex;
-  align-items: center;
-  min-height: var(--qc-spacer-md);
+  align-items: start;
   margin: 0;
-  padding: 0;
 }
-.qc-check-row input[type=radio],
+.qc-selection-button:not(:has(input:disabled)):hover, .qc-check-row:not(:has(input:disabled)):hover {
+  cursor: pointer;
+}
+.qc-selection-button:has(input:disabled), .qc-check-row:has(input:disabled) {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+.qc-selection-button input[type=radio], .qc-check-row input[type=radio],
+.qc-selection-button input[type=checkbox],
 .qc-check-row input[type=checkbox] {
   display: flex;
   position: relative;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  cursor: pointer;
-  margin: 0;
+  margin: 0 var(--qc-spacer-xs) 0 0;
   background-color: var(--qc-color-white);
   border-style: solid;
   border-color: var(--qc-color-blue-dark);
-  width: var(--qc-spacer-md);
-  height: var(--qc-spacer-md);
-  border-width: 2px;
 }
-.qc-check-row input[type=radio]::before,
+.qc-selection-button input[type=radio]:not(:disabled):hover, .qc-check-row input[type=radio]:not(:disabled):hover,
+.qc-selection-button input[type=checkbox]:not(:disabled):hover,
+.qc-check-row input[type=checkbox]:not(:disabled):hover {
+  cursor: pointer;
+}
+.qc-selection-button input[type=radio]::before, .qc-check-row input[type=radio]::before,
+.qc-selection-button input[type=checkbox]::before,
 .qc-check-row input[type=checkbox]::before {
   content: "";
   position: absolute;
@@ -1875,6 +1883,32 @@ qc-search-bar {
   inset: 0;
   overflow: hidden;
   opacity: 0;
+}
+.qc-selection-button input[type=radio]:checked, .qc-check-row input[type=radio]:checked,
+.qc-selection-button input[type=checkbox]:checked,
+.qc-check-row input[type=checkbox]:checked {
+  border-color: var(--qc-color-blue-regular);
+}
+.qc-selection-button input[type=radio]:disabled, .qc-check-row input[type=radio]:disabled,
+.qc-selection-button input[type=checkbox]:disabled,
+.qc-check-row input[type=checkbox]:disabled {
+  cursor: not-allowed;
+  border-color: var(--qc-color-grey-light);
+}
+.qc-selection-button .qc-check-label, .qc-check-row .qc-check-label {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
+}
+
+.qc-check-row {
+  flex-grow: 0;
+}
+.qc-check-row input[type=radio],
+.qc-check-row input[type=checkbox] {
+  min-width: var(--qc-spacer-md);
+  min-height: var(--qc-spacer-md);
+  border-width: 2px;
 }
 .qc-check-row input[type=radio]:focus,
 .qc-check-row input[type=checkbox]:focus {
@@ -1887,50 +1921,103 @@ qc-search-bar {
 .qc-check-row input[type=checkbox]:checked {
   border-color: var(--qc-color-blue-regular);
 }
-.qc-check-row input[type=radio]:disabled,
-.qc-check-row input[type=checkbox]:disabled {
-  cursor: not-allowed;
+.qc-check-row .qc-check-label {
+  display: flex;
+  flex-grow: 0;
+}
+.qc-check-row .qc-check-description {
+  display: flex;
+  flex-grow: 0;
+}
+
+.qc-selection-button {
+  position: relative;
+  z-index: 10;
+  background: transparent;
+  border: 0;
+  flex-grow: 1;
+  padding: var(--qc-spacer-sm);
+}
+.qc-selection-button::before {
+  position: absolute;
+  display: block;
+  content: "";
+  background-color: var(--qc-color-background);
+  inset: 0;
+  z-index: -5;
+}
+.qc-selection-button:has(input:focus), .qc-selection-button:focus {
+  outline: 2px solid var(--qc-color-formfield-focus-outline);
+}
+.qc-selection-button:has(input:focus)::before, .qc-selection-button:focus::before {
+  border: 2px solid var(--qc-color-formfield-focus-border);
+}
+.qc-selection-button input[type=radio],
+.qc-selection-button input[type=checkbox] {
+  min-width: var(--qc-spacer-sm);
+  min-height: var(--qc-spacer-sm);
+  margin-top: 0.4rem;
+  border-width: 1px;
+}
+.qc-selection-button::before {
+  border-style: solid;
+  border-width: 0.1rem;
   border-color: var(--qc-color-grey-light);
 }
-.qc-check-row input[type=radio]:disabled + label,
-.qc-check-row input[type=checkbox]:disabled + label {
-  color: var(--qc-color-grey-regular);
-  cursor: not-allowed;
+.qc-selection-button:not(:has(input:focus, input:disabled)):hover::before {
+  border-color: var(--qc-color-blue-light);
 }
-.qc-check-row label {
-  display: flex;
-  align-items: end;
-  cursor: pointer;
-  padding-left: var(--qc-spacer-xs);
-  padding-right: var(--qc-spacer-xs);
-  margin-bottom: 0;
+.qc-selection-button:has(input:checked)::before {
+  background-color: var(--qc-color-blue-pale);
+}
+.qc-selection-button:has(input:disabled)::before {
+  background-color: var(--qc-color-grey-pale);
+}
+.qc-selection-button .qc-check-label {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-regular);
+  font-weight: var(--qc-font-weight-semi-bold);
 }
 
 .qc-compact input[type=radio],
 .qc-compact input[type=checkbox] {
-  width: var(--qc-spacer-sm);
-  height: var(--qc-spacer-sm);
+  min-width: var(--qc-spacer-sm);
+  min-height: var(--qc-spacer-sm);
+  margin-top: 0.4rem;
   border-width: 1px;
-}
-
-.qc-check-row input[type=radio] {
-  border-radius: 100%;
-}
-.qc-check-row input[type=radio]::before {
-  width: 1.4rem;
-  height: 1.4rem;
-  border-radius: 100%;
-  background-color: var(--qc-color-blue-regular);
-}
-.qc-check-row input[type=radio]:checked::before {
-  opacity: 1;
 }
 .qc-compact input[type=radio]::before {
   width: 1rem;
   height: 1rem;
+}
+
+.qc-check-text {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--qc-spacer-sm);
+  min-height: var(--qc-spacer-md);
+}
+
+.qc-check-description {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
+  margin: 0;
+}
+
+input[type=radio] {
+  border-radius: 100%;
+}
+input[type=radio]::before {
+  border-radius: 100%;
+  background-color: var(--qc-color-blue-regular);
+}
+input[type=radio]:checked::before {
+  opacity: 1;
+}
+input[type=radio]:checked:not(.qc-compact)::before {
+  width: 1.4rem;
+  height: 1.4rem;
 }
 
 .qc-radio-select-parent {
@@ -2079,6 +2166,12 @@ qc-search-bar {
 
 .qc-fieldset-invalid legend, .qc-checkbox-single.qc-checkbox-single-invalid legend {
   margin-left: calc(-1 * var(--qc-spacer-xs) - 2px);
+}
+
+.qc-field-elements-flex {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--qc-spacer-sm);
 }
 
 .qc-field-elements-grid-column, .qc-field-elements-grid-row {
