--- a/src/sdg/scss/components/_checkRow.scss
+++ b/src/sdg/scss/components/_checkRow.scss
@@ -1,27 +1,32 @@
 @use "qc-sdg-lib" as *;
 
-.qc-check-row {
-
+%check-row {
   display: flex;
-  align-items: center;
-  min-height: token-value(spacer, md);
+  align-items: start;
   margin: 0;
-  padding: 0;
+
+  &:not(:has(input:disabled)):hover {
+    cursor: pointer;
+  }
+
+  &:has(input:disabled) {
+    color: token-value(color, grey, regular);
+    cursor: not-allowed;
+  }
 
   input[type="radio"],
   input[type="checkbox"] {
     display: flex;
     position: relative;
     appearance: none;
-    cursor: pointer;
-    margin: 0;
+    margin: 0 token-value(spacer, xs) 0 0;
     background-color: token-value(color, white);
     border-style: solid;
     border-color: token-value(color, blue, dark);
 
-    width: token-value(spacer, md);
-    height: token-value(spacer, md);
-    border-width: 2px;
+    &:not(:disabled):hover {
+      cursor: pointer;
+    }
 
     &::before {
       content: "";
@@ -31,6 +36,31 @@
       overflow: hidden;
       opacity: 0;
     }
+
+    &:checked {
+      border-color: token-value(color blue regular);
+    }
+
+    &:disabled {
+      cursor: not-allowed;
+      border-color: token-value(color, grey, light);
+    }
+  }
+
+  .qc-check-label {
+    @include content-font(md);
+  }
+}
+
+.qc-check-row {
+  @extend %check-row;
+  flex-grow: 0;
+
+  input[type="radio"],
+  input[type="checkbox"] {
+    min-width: token-value(spacer, md);
+    min-height: token-value(spacer, md);
+    border-width: 2px;
 
     &:focus {
       outline: 2px solid token-value(color, blue, light);
@@ -42,35 +72,80 @@
     &:checked {
       border-color: token-value(color blue regular);
     }
-
-    &:disabled {
-      cursor: not-allowed;
-      border-color: token-value(color, grey, light);
-    }
-
-    &:disabled + label {
-      color: token-value(color, grey, regular);
-      cursor: not-allowed;
-    }
   }
 
-  label {
+  .qc-check-label {
     display: flex;
-    align-items: end;
-    cursor: pointer;
-    padding-left: token-value(spacer, xs);
-    padding-right: token-value(spacer, xs);
-    margin-bottom: 0;
-    @include content-font(md);
+    flex-grow: 0;
+  }
+
+  .qc-check-description {
+    display: flex;
+    flex-grow: 0;
   }
 }
 
-.qc-compact  {
+.qc-selection-button {
+  @extend %check-row;
+  @include qc-formcontrol-box();
+  flex-grow: 1;
+
   input[type="radio"],
   input[type="checkbox"] {
-    width: token-value(spacer, sm);
-    height: token-value(spacer, sm);
+    min-width: token-value(spacer, sm);
+    min-height: token-value(spacer, sm);
+    margin-top: rem(4);
     border-width: 1px;
+  }
+
+  padding: token-value(spacer, sm);
+
+  &::before {
+    border-style: solid;
+    border-width: rem(1);
+    border-color: token-value(color, grey, light);
+  }
+
+  &:not(:has(input:focus, input:disabled)):hover::before {
+    border-color: token-value(color, blue, light);
+  }
+
+  &:has(input:checked)::before {
+    background-color: token-value(color, blue, pale);
+  }
+
+  &:has(input:disabled)::before {
+    background-color: token-value(color, grey, pale);
+  }
+
+  .qc-check-label {
+    @include content-font(md, semi-bold);
   }
 }
 
+.qc-compact {
+  input[type="radio"],
+  input[type="checkbox"] {
+    min-width: token-value(spacer, sm);
+    min-height: token-value(spacer, sm);
+    margin-top: rem(4);
+    border-width: 1px;
+  }
+
+  input[type="radio"]::before {
+    width: rem(10);
+    height: rem(10);
+  }
+}
+
+.qc-check-text {
+  display: flex;
+  flex-direction: column;
+  row-gap: token-value(spacer, sm);
+  min-height: token-value(spacer, md);
+}
+
+.qc-check-description {
+  @include content-font(sm);
+  margin: 0;
+}
