--- a/src/sdg/scss/components/_radioButton.scss
+++ b/src/sdg/scss/components/_radioButton.scss
@@ -18,5 +18,10 @@ input[type=radio] {
       width: rem(14);
       height: rem(14);
     }
+
+    &.qc-compact::before {
+      width: rem(10);
+      height: rem(10);
+    }
   }
 }
