--- a/src/sdg/scss/components/_checkRow.scss
+++ b/src/sdg/scss/components/_checkRow.scss
@@ -60,13 +60,12 @@
   input[type="checkbox"] {
     min-width: token-value(spacer, md);
     min-height: token-value(spacer, md);
-    border-width: 2px;
+    border-width: rem(2);
 
     &:focus {
       outline: 2px solid token-value(color, blue, light);
       outline-offset: 0;
       border-color: token-value(color, blue, dark) !important;
-      border-width: 2px;
     }
 
     &:checked {
@@ -85,7 +84,7 @@
     min-width: token-value(spacer, sm);
     min-height: token-value(spacer, sm);
     margin-top: rem(4);
-    border-width: 1px;
+    border-width: rem(1);
   }
 
   padding: token-value(spacer, sm);
@@ -120,11 +119,6 @@
     min-height: token-value(spacer, sm);
     margin-top: rem(4);
     border-width: 1px;
-  }
-
-  input[type="radio"]::before {
-    width: rem(10);
-    height: rem(10);
   }
 }
 
