--- a/src/sdg/scss/components/_checkbox.scss
+++ b/src/sdg/scss/components/_checkbox.scss
@@ -34,10 +34,26 @@ input[type="checkbox"] {
       height: rem(18);
 
     }
+
+    &.qc-compact {
+      &::before {
+        width: rem(8);
+        height: rem(5);
+        border: rem(2) solid token-value(color, blue, regular);
+        border-top: 0;
+        border-right: 0;
+        transform: rotate(-45deg);
+        top: rem(1);
+      }
+
+      &::after {
+        width: token-value(spacer, sm);
+        height: rem(12);
+      }
+    }
   }
 
   .qc-compact &:checked {
-
     &::before {
       width: rem(8);
       height: rem(5);
@@ -53,9 +69,7 @@ input[type="checkbox"] {
       height: rem(12);
     }
   }
-
 }
-
 
 .qc-checkbox-single {
   margin-bottom: token-value(spacer content-block mb);
