--- a/src/sdg/scss/components/_fieldset.scss
+++ b/src/sdg/scss/components/_fieldset.scss
@@ -8,11 +8,14 @@
   row-gap: token-value(spacer, sm);
   legend {
     font-weight: token-value(font weight content bold);
-    display: -webkit-box;
-    margin-bottom: token-value(spacer, sm);
+    display: inline-block;
+    margin-bottom: token-value(spacer, md);
   }
   &.qc-compact {
     margin-bottom: token-value(spacer, sm);
+    legend {
+      margin-bottom: token-value(spacer, sm);
+    }
   }
 }
 .qc-fieldset-disabled {
@@ -23,9 +26,8 @@
 
 .qc-fieldset-required {
   @include content-font(md, bold);
-  display: inline-flex;
   color: token-value(color, red, regular);
-  margin: 0 0 0 token-value(spacer, xs);
+  margin: 0 0 0 rem(4);
 }
 
 $invalid-offset: token-value(spacer, xs);
