--- a/src/sdg/scss/components/_checkRow.scss
+++ b/src/sdg/scss/components/_checkRow.scss
@@ -3,7 +3,7 @@
 .qc-check-row {
 
   display: flex;
-  align-items: center;
+  align-items: start;
   min-height: token-value(spacer, md);
   margin: 0;
   padding: 0;
@@ -13,6 +13,7 @@
     display: flex;
     position: relative;
     appearance: none;
+    flex-shrink: 0;
     cursor: pointer;
     margin: 0;
     background-color: token-value(color, white);
@@ -55,8 +56,6 @@
   }
 
   label {
-    display: flex;
-    align-items: end;
     cursor: pointer;
     padding-left: token-value(spacer, xs);
     padding-right: token-value(spacer, xs);
@@ -71,6 +70,7 @@
     width: token-value(spacer, sm);
     height: token-value(spacer, sm);
     border-width: 1px;
+    top: rem(4)
   }
 }
 
