--- a/src/sdg/scss/components/_fieldset.scss
+++ b/src/sdg/scss/components/_fieldset.scss
@@ -10,11 +10,14 @@
   row-gap: token-value(spacer, sm);
   legend {
     font-weight: token-value(font weight content bold);
-    display: -webkit-box;
-    margin-bottom: token-value(spacer, sm);
+    display: block;
+    margin-bottom: token-value(spacer, md);
   }
   &.qc-compact {
     margin-bottom: token-value(spacer, sm);
+    legend {
+      margin-bottom: token-value(spacer, sm);
+    }
   }
 }
 .qc-fieldset-disabled {
@@ -25,7 +28,6 @@
 
 .qc-fieldset-required {
   @include content-font(md, bold);
-  display: flex;
   color: token-value(color, red, regular);
   margin-left: token-value(spacer, xs);
 }
