Correction de regression de zone cliquable pour checkbox seule

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2140,8 +2140,8 @@ input[type=checkbox]:checked.qc-compact::after {
 
 .qc-checkbox-single {
   margin-bottom: var(--qc-spacer-content-block-mb);
-  display: flex;
-  flex-grow: 0;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .qc-checkbox-single label {
   flex-grow: 0;
