--- a/src/sdg/scss/components/_checkbox.scss
+++ b/src/sdg/scss/components/_checkbox.scss
@@ -73,8 +73,7 @@ input[type="checkbox"] {
 
 .qc-checkbox-single {
   margin-bottom: token-value(spacer content-block mb);
-  display: flex;
-  flex-grow: 0;
+  width: fit-content;
 
   label {
     flex-grow: 0;
